--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="//code.ionicframework.com/1.0.0-beta.12/js/ionic.bundle.js"></script>
+    <!--<script src="//code.ionicframework.com/1.0.0-beta.14/js/ionic.bundle.js"></script>-->
+    <!--<script src="lib/ionic/js/ionic.bundle.min.js"></script>-->
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/jsOAuth-1.3.6.js"></script>
     <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
