--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="//code.ionicframework.com/1.0.0-beta.12/js/ionic.bundle.js"></script>
+    <!--<script src="//code.ionicframework.com/1.0.0-beta.12/js/ionic.bundle.js"></script>-->
     <!--<script src="//code.ionicframework.com/1.0.0-beta.14/js/ionic.bundle.js"></script>-->
-    <!--<script src="lib/ionic/js/ionic.bundle.min.js"></script>-->
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/jsOAuth-1.3.6.js"></script>
     <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
+    <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
     <!--Controllers-->
